--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,9 +16,9 @@
 			],
 			"env": {
 				"VULCAIN_ENV": "<%=env%>",
-				"VULCAIN_SERVICE_NAME": "<%=project.namespace %>.<%= project.name %>",
+				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
 				"VULCAIN_SERVICE_VERSION": "1.0",
-				"VULCAIN_TENANT": "TesT",
+				"VULCAIN_TEST": "true",
 				"NODE_ENV": "development"
 			},
             "console": "integratedTerminal",
@@ -40,9 +40,9 @@
             ],
             "env": {
 				"VULCAIN_ENV": "<%=env%>",
-				"VULCAIN_SERVICE_NAME": "<%=project.namespace %>.<%= project.name %>",
+				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
 				"VULCAIN_SERVICE_VERSION": "1.0",
-				"VULCAIN_TENANT": "TesT",
+				"VULCAIN_TEST": "True",
                 "VULCAIN_TEST": "true"
             },
             "console": "integratedTerminal",
