--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "Alain Metge",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/node": "^6.0.51",
+    "@types/rx": "^2.5.34",
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.33",
     "@types/sinon": "^1.16.32",
@@ -17,7 +19,6 @@
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.9.0",
     "merge2": "^1.0.0",
-    "typings": "^2.0.0",
     "chai": "^3.5.0",
     "sinon": "^1.17.6",
     "tslint": "^4.0.1",
@@ -27,19 +28,14 @@
     "gulp-mocha": "^3.0.1"
   },
   "dependencies": {
-    "@types/node": "^6.0.51",
-    "@types/passport-strategy": "^0.2.30",
-    "@types/rx": "^2.5.34",
     "body-parser": "^1.14.0",
     "cors": "^2.8.1",
-    "crypto": "0.0.1",
+    "crypto": "0.0.3",
     "express": "^4.13.0",
     "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.2",
     "mongodb": "^2.2.11",
-    "node-uuid": "^1.4.0",
-    "passport": "^0.3.0",
-    "passport-http": "^0.3.0",
+    "uuid": "^1.4.0",
     "reflect-metadata": "^0.1.0",
     "rx": "^4.1.0",
     "unirest": "^0.5.0",
