--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.33",
     "@types/sinon": "^1.16.32",
+    "@types/express": "^4.0.34",
     "typescript": "^2.0.10",
     "fs-extra": "^0.26.0",
     "gulp": "^3.9.0",
