--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
   },
   "author": "Alain Metge",
   "license": "Apache-2.0",
-  "devDependencies": {
+ "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/express": "^4.0.34",
+    "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.51",
     "@types/rx": "^2.5.34",
-    "@types/chai": "^3.4.34",
-    "@types/mocha": "^2.2.33",
     "@types/sinon": "^1.16.32",
-    "@types/express": "^4.0.34",
-    "typescript": "^2.0.10",
-    "fs-extra": "^0.26.0",
+    "chai": "^3.5.0",
+    "fs-extra": "^1.0.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1.9.0",
-    "merge2": "^1.0.0",
-    "chai": "^3.5.0",
-    "sinon": "^1.17.6",
-    "tslint": "^4.0.1",
     "gulp-istanbul": "^1.1.1",
+    "gulp-mocha": "^3.0.1",
+    "gulp-sourcemaps": "^1.9.0",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.3",
-    "gulp-mocha": "^3.0.1"
+    "merge2": "^1.0.0",
+    "sinon": "^1.17.6",
+    "tslint": "^4.0.1",
+    "typescript": "^2.1.4"
   },
   "dependencies": {
     "body-parser": "^1.14.0",
@@ -35,11 +35,11 @@
     "express": "^4.13.0",
     "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.2",
-    "mongodb": "^2.2.11",
-    "uuid": "^1.4.0",
+    "mongodb": "^2.2.12",
+    "uuid": "^3.0.1",
     "reflect-metadata": "^0.1.0",
     "rx": "^4.1.0",
     "unirest": "^0.5.0",
-    "vulcain-corejs": "^1.1.47"
+    "vulcain-corejs": "^1.1.64"
   }
 }
