--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,42 +12,41 @@
 			"args": [],
 			"cwd": "${workspaceRoot}",
 			"runtimeExecutable": null,
-			"runtimeArgs": [
+			"runtimeArgs": [],
+			"env": {
+				"VULCAIN_ENV": "test",
+				"VULCAIN_SERVICE_NAME": "momo",
+				"VULCAIN_SERVICE_VERSION": "1.0",
+				"NODE_ENV": "development"
+			},
+			"console": "integratedTerminal",
+			"sourceMaps": true,
+			"outDir": "${workspaceRoot}/dist"
+		},
+		{
+			"name": "Test",
+			"type": "node",
+			"request": "launch",
+			"smartStep": true,
+			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+			"stopOnEntry": false,
+			"preLaunchTask": "compile-test",
+			"args": [
+				"${workspaceRoot}/dist-test/**/*.js"
 			],
+			"cwd": "${workspaceRoot}",
+			"runtimeExecutable": null,
+			"runtimeArgs": [],
 			"env": {
 				"VULCAIN_ENV": "<%=env%>",
 				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
 				"VULCAIN_SERVICE_VERSION": "1.0",
-				"VULCAIN_TEST": "true",
-				"NODE_ENV": "development"
+				"VULCAIN_TEST": "true"
 			},
-            "console": "integratedTerminal",
+			"console": "integratedTerminal",
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/dist"
+			"outDir": "${workspaceRoot}/dist-test"
 		},
-        {
-            "name": "Test",
-            "type": "node",
-			"request": "launch",
-            "smartStep": true,
-            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-            "stopOnEntry": false,
-            "preLaunchTask": "compile-test",
-            "args": ["${workspaceRoot}/dist-test/**/*.js"],
-            "cwd": "${workspaceRoot}",
-            "runtimeExecutable": null,
-            "runtimeArgs": [
-            ],
-            "env": {
-				"VULCAIN_ENV": "<%=env%>",
-				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
-				"VULCAIN_SERVICE_VERSION": "1.0",
-                "VULCAIN_TEST": "true"
-            },
-            "console": "integratedTerminal",
-            "sourceMaps": true,
-            "outDir": "${workspaceRoot}/dist-test"
-        },
 		{
 			"name": "Attach",
 			"type": "node",
