--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "editor.folding": true,
     "files.trimTrailingWhitespace": true,
     "files.autoSave": "afterDelay",
-    "files.autoSaveDelay": 2000
+    "files.autoSaveDelay": 2000,
+    "files.associations": {
+        "*.vulcain": "json"
+    }    
 }
