--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
 			"runtimeExecutable": null,
 			"runtimeArgs": [],
 			"env": {
-				"VULCAIN_ENV_MODE": "test",
+				"VULCAIN_ENV_MODE": "local",
 				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
 				"VULCAIN_SERVICE_VERSION": "1.0",
 				"NODE_ENV": "development"
