--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,8 +16,11 @@
 			"runtimeArgs": [],
 			"env": {
 				"VULCAIN_ENV_MODE": "local",
+				"VULCAIN_ENV": "<%= env %>",				
 				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
 				"VULCAIN_SERVICE_VERSION": "1.0",
+				"VULCAIN_SERVER": "<%= configServer %>",
+                		"VULCAIN_TOKEN": "<%= configToken %>",				
 				"NODE_ENV": "development"
 			},
 			"console": "internalConsole",
