--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/express": "^4.0.34",
     "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.51",
-    "@types/rx": "^2.5.34",
     "@types/sinon": "^1.16.32",
     "chai": "^3.5.0",
     "fs-extra": "^1.0.0",
@@ -35,9 +34,9 @@
     "moment": "^2.15.2",
     "mongodb": "^2.2.12",
     "reflect-metadata": "^0.1.0",
-    "rx": "^4.1.0",
+    "rxjs": "^5.1.0",
     "unirest": "^0.5.0",
     "uuid": "^3.0.1",
-    "vulcain-corejs": "^1.1.70"
+    "vulcain-corejs": "^1.1.107"
   }
 }
