--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,6 @@
 {
 	"version": "0.2.0",
 	"configurations": [
-		
 		{
 			"name": "Debug",
 			"type": "node",
@@ -16,29 +15,32 @@
 			"runtimeArgs": [],
 			"env": {
 				"VULCAIN_ENV_MODE": "local",
-				"VULCAIN_ENV": "<%= env %>",				
+				"VULCAIN_ENV": "<%= env %>",
 				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
-				"VULCAIN_SERVICE_VERSION": "1.0",			
+				"VULCAIN_SERVICE_VERSION": "1.0",
 				"NODE_ENV": "development"
 			},
 			"console": "internalConsole",
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/dist"
+			"outFiles": [
+				"${workspaceRoot}/dist/**/*.js"
+			]
 		},
 		{
 			"name": "Test",
 			"type": "node",
 			"request": "launch",
 			"smartStep": true,
-			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
 			"stopOnEntry": false,
-			"preLaunchTask": "compile-test",
-			"args": [
-				"${workspaceRoot}/dist-test/**/*.js"
-			],
 			"cwd": "${workspaceRoot}",
-			"runtimeExecutable": null,
-			"runtimeArgs": [],
+			"runtimeExecutable": "npm",
+			"windows": {
+				"runtimeExecutable": "npm.cmd"
+			},
+			"runtimeArgs": [
+				"run-script",
+				"test"
+			],
 			"env": {
 				"VULCAIN_ENV": "<%=env%>",
 				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
@@ -46,7 +48,10 @@
 			},
 			"console": "internalConsole",
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/dist-test"
+			"outFiles": [
+				"${workspaceRoot}/dist-test/**/*.js",
+				"${workspaceRoot}/dist/**/*.js"
+			]
 		},
 		{
 			"name": "Attach",
