--- a/package.json
+++ b/package.json
@@ -3,26 +3,28 @@
   "version": "1.0.0",
   "description": "Vulcain micro-service",
   "main": "src/index.ts",
-  "scripts": {},
+  "scripts": {
+    "test": "gulp test"
+  },
   "author": "Alain Metge",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/express": "^4.0.34",
     "@types/mocha": "^2.2.33",
-    "@types/node": "^6.0.51",
-    "@types/sinon": "^1.16.32",
+    "@types/node": "^7.0.12",
+    "@types/sinon": "^2.1.2",
     "chai": "^3.5.0",
-    "fs-extra": "^1.0.0",
+    "fs-extra": "^2.1.2",
     "gulp": "^3.9.0",
     "gulp-istanbul": "^1.1.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-sourcemaps": "^1.9.0",
+    "gulp-sourcemaps": "^2.5.1",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.3",
     "merge2": "^1.0.0",
-    "sinon": "^1.17.6",
-    "tslint": "^4.0.1",
+    "sinon": "^2.1.0",
+    "tslint": "^5.0.0",
     "typescript": "^2.1.4"
   },
   "dependencies": {
