--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "Debug",
 			"type": "node",
 			"request": "launch",
-			"smartStep": true,
+			"smartStep": false,
 			"program": "${workspaceRoot}/src/index.ts",
 			"stopOnEntry": false,
 			"preLaunchTask": "compile-ts",
@@ -15,8 +15,8 @@
 			"runtimeArgs": [],
 			"env": {
 				"VULCAIN_ENV_MODE": "local",
-				"VULCAIN_ENV": "<%= env %>",
-				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
+				"VULCAIN_ENV": "test",
+				"VULCAIN_SERVICE_NAME": "service2",
 				"VULCAIN_SERVICE_VERSION": "1.0",
 				"NODE_ENV": "development"
 			},
@@ -42,8 +42,8 @@
 				"test"
 			],
 			"env": {
-				"VULCAIN_ENV": "<%=env%>",
-				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
+				"VULCAIN_ENV": "test",
+				"VULCAIN_SERVICE_NAME": "service2",
 				"VULCAIN_SERVICE_VERSION": "1.0"
 			},
 			"console": "internalConsole",
