--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,11 +14,11 @@
 			"runtimeExecutable": null,
 			"runtimeArgs": [],
 			"env": {
-				"VULCAIN_ENV_MODE": "local",
-				"VULCAIN_ENV": "test",
-				"VULCAIN_SERVICE_NAME": "service2",
+				"VULCAIN_ENV": "<%= env %>",				
+				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
 				"VULCAIN_SERVICE_VERSION": "1.0",
-				"NODE_ENV": "development"
+				"VULCAIN_SERVER": "<%= configServer %>",
+                		"VULCAIN_TOKEN": "<%= configToken %>",	
 			},
 			"console": "internalConsole",
 			"sourceMaps": true,
@@ -42,8 +42,8 @@
 				"test"
 			],
 			"env": {
-				"VULCAIN_ENV": "test",
-				"VULCAIN_SERVICE_NAME": "service2",
+				"VULCAIN_ENV": "<%= env %>",				
+				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
 				"VULCAIN_SERVICE_VERSION": "1.0"
 			},
 			"console": "internalConsole",
