--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "rxjs": "^5.1.0",
     "unirest": "^0.5.0",
     "uuid": "^3.0.1",
-    "vulcain-corejs": "^2.0.0"
+    "vulcain-corejs": "~2.0.0"
   }
 }
