--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,61 +1,46 @@
 {
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "Debug",
-			"type": "node",
-			"request": "launch",
-			"smartStep": true,
-			"program": "${workspaceRoot}/src/index.ts",
-			"stopOnEntry": false,
-			"preLaunchTask": "compile-ts",
-			"args": [],
-			"cwd": "${workspaceRoot}",
-			"runtimeExecutable": null,
-			"runtimeArgs": [],
-			"env": {
-				"VULCAIN_ENV": "<%= env %>",
-				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
-				"VULCAIN_SERVICE_VERSION": "1.0"
-			},
-			"console": "internalConsole",
-			"sourceMaps": true,
-			"outFiles": [
-				"${workspaceRoot}/dist/**/*.js"
-			]
-		},
-		{
-			"name": "Test",
-			"type": "node",
-			"request": "launch",
-			"smartStep": true,
-			"stopOnEntry": false,
-			"cwd": "${workspaceRoot}",
-			"runtimeExecutable": "npm",
-			"windows": {
-				"runtimeExecutable": "npm.cmd"
-			},
-			"runtimeArgs": [
-				"run-script",
-				"test"
-			],
-			"env": {
-				"VULCAIN_ENV": "<%= env %>",
-				"VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
-				"VULCAIN_SERVICE_VERSION": "1.0"
-			},
-			"console": "internalConsole",
-			"sourceMaps": true,
-			"outFiles": [
-				"${workspaceRoot}/dist-test/**/*.js",
-				"${workspaceRoot}/dist/**/*.js"
-			]
-		},
-		{
-			"name": "Attach",
-			"type": "node",
-			"request": "attach",
-			"port": 5858
-		}
-	]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "node",
+            "request": "launch",
+            "smartStep": true,
+            "name": "Mocha Tests",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "-u",
+                "tdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceFolder}/dist/test"
+            ],
+            "env": {
+                "VULCAIN_ENV": "<%= env %>",
+                "VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
+                "VULCAIN_SERVICE_VERSION": "1.0"
+            },
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "name": "Debug",
+            "type": "node",
+            "request": "launch",
+            "smartStep": true,
+            "program": "${workspaceRoot}/src/index.ts",
+            "preLaunchTask": "build",
+            "args": [],
+            "cwd": "${workspaceRoot}",
+            "env": {
+                "VULCAIN_ENV": "<%= env %>",
+                "VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
+                "VULCAIN_SERVICE_VERSION": "1.0"
+            },
+            "sourceMaps": true,
+            "internalConsoleOptions": "openOnSessionStart",
+            "outFiles": [
+                "${workspaceRoot}/dist/src/**/*.js"
+            ]
+        }
+    ]
 }
