--- a/package.json
+++ b/package.json
@@ -1,39 +1,22 @@
 {
-  "name": "service2",
+  "name": "<%= project.fullName %>",
   "version": "1.0.0",
   "description": "Vulcain micro-service",
   "main": "src/index.ts",
   "scripts": {
-    "test": "gulp test"
+    "build": "./node_modules/.bin/tsc -p ."
   },
   "author": "Alain Metge",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/chai": "^4.0.4",
-    "@types/mocha": "^2.2.33",
-    "@types/node": "^8.0.31",
-    "@types/sinon": "^2.1.2",
+    "@types/chai": "^4.0.5",
+    "@types/mocha": "^2.2.44",
+    "@types/node": "^8.0.53",
     "chai": "^4.1.2",
-    "fs-extra": "^4.0.2",
-    "gulp": "^3.9.0",
-    "gulp-istanbul": "^1.1.1",
-    "gulp-mocha": "^4.3.1",
-    "gulp-sourcemaps": "^2.5.1",
-    "gulp-tslint": "^8.1.2",
-    "gulp-typescript": "^3.1.3",
-    "merge2": "^1.0.0",
-    "sinon": "^4.0.0",
-    "tslint": "^5.0.0",
-    "typescript": "^2.1.4"
+    "mocha": "^4.0.1",
+    "typescript": "^2.6.1"
   },
   "dependencies": {
-    "jsonwebtoken": "^8.0.1",
-    "moment": "^2.15.2",
-    "mongodb": "^2.2.12",
-    "reflect-metadata": "^0.1.0",
-    "rxjs": "^5.1.0",
-    "unirest": "^0.5.0",
-    "uuid": "^3.0.1",
     "vulcain-corejs": ">2.0.0-"
   }
 }
