--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,27 +2,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
-            "request": "launch",
-            "smartStep": true,
-            "name": "Mocha Tests",
-            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-            "args": [
-                "-u",
-                "tdd",
-                "--timeout",
-                "999999",
-                "--colors",
-                "${workspaceFolder}/dist/test"
-            ],
-            "env": {
-                "VULCAIN_ENV": "<%= env %>",
-                "VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
-                "VULCAIN_SERVICE_VERSION": "1.0"
-            },
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
             "name": "Debug",
             "type": "node",
             "request": "launch",
@@ -41,6 +20,27 @@
             "outFiles": [
                 "${workspaceRoot}/dist/src/**/*.js"
             ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "smartStep": true,
+            "name": "Tests",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "-u",
+                "tdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceFolder}/dist/test"
+            ],
+            "env": {
+                "VULCAIN_ENV": "<%= env %>",
+                "VULCAIN_SERVICE_NAME": "<%= project.fullName %>",
+                "VULCAIN_SERVICE_VERSION": "1.0"
+            },
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
